# Eventlet_Flask-SocketIO_Celery

./: .gitignore  README.md  __init__.py  app.py  backend.py  celery.py  data.py  make_celery.py  pyproject.toml  run.py  tasks.py
app/: __init__.py  app.py  celery.py  tasks.py
application/: __init__.py  celery.py  events.py  messagequeue.py  tasks.py  views.py  webserver.py
application/static/js/: main.js
example_app/: __init__.py  celery.py  events.py  run.py  tasks.py  views.py
static/js/: main.js  main.mjs  websocket.js
templates/: index.html
