[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
version = "1.0.0"
name = "application"
description = "Minimal real-time web application from streaming data from an external process"
authors = ["Jacob Lapenna"]
author-email = "9giwa602@duck.com"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["Flask", "Flask-SocketIO", "eventlet", "celery", "redis"]

[options]
sys_platform = "linux"
